fix: gap content and overlay in drop-down

--- a/src/components/drop-down/drop-down.module.css
+++ b/src/components/drop-down/drop-down.module.css
@@ -16,4 +16,5 @@
 .content {
 	display: flex;
 	flex-direction: column;
+	width: 100%;
 }
